# irona

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  demo.tape  release.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: index.html
docs/superpowers/plans/: 2026-04-20-elm-arch-implementation.md  2026-04-20-irona-implementation.md
docs/superpowers/specs/: 2026-04-20-elm-arch-design.md  2026-04-20-irona-design.md
src/: app.rs  deleter.rs  errors.rs  main.rs  mcp.rs  render.rs  scanner.rs  ui.rs
src/components/: entry_list.rs  header.rs  mod.rs  status_bar.rs
src/model/: entry.rs  entry_list.rs  mod.rs
