[package]
name = "irona"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "irona"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2"
crossbeam-channel = "0.5"
rayon = "1"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
