[package]
name = "irona-cli"
version = "0.3.1"
edition = "2021"
description = "A terminal UI tool for reclaiming disk space from build artifacts"
license = "MIT"
repository = "https://github.com/kunjee17/irona"
keywords = ["tui", "cli", "disk", "cleanup", "artifacts"]
categories = ["command-line-utilities"]

[[bin]]
name = "irona"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2"
ignore = "0.4"
crossbeam-channel = "0.5"
rayon = "1"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["clock"] }
tuirealm = { version = "3", features = ["crossterm"] }

[dev-dependencies]
tempfile = "3"
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
